--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,13 @@ services:
       - 443:443
     networks:
       - default
+    links:
+      - php
+
+  php:
+    image: php:7.4-fpm
+    volumes:
+      - ./app:/var/www/html
 
 networks:
   default:
